add simple and complex editors and logo

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #2e2e2e;
   min-height: 100px;
   display: flex;
   flex-direction: column;
